tests/fixtures/multi_module/invalid/missing_target/a.furqan
bismillah A {
    authority: NAMING_MD
    serves: purpose_hierarchy.balance_for_living_systems
    scope: scan
    not_scope: nothing_excluded
}

tanzil a_deps {
    depends_on: NotInProject
}

fn placeholder() -> Integrity {
    return Integrity
}
